KDirSortFilterProxyModel: Fix sorting issues for e.g. search-protocols

For a e.g. search-protocol comparing KFileItem::text() or
KFileItem::name() is not sufficient as it may
show different files with the same filename in parallel. To assure a
defined order a comparison of the URLs is done as fallback.

BUG: 270606
FIXED-IN: 4.7.0